[package]
name = "core-ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.28.2", features = ["rand-std", "hashes-std"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"